gcc/testsuite/gm2/errors/fail/testaddress.mod
MODULE testaddress ;

FROM SYSTEM IMPORT ADDRESS ;

VAR
   a: ADDRESS ;
   c: CARDINAL ;
BEGIN
   c := a + 'z'
END testaddress.